Fixed bugs caused by property updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Apr 04 14:51:05 PDT 2011
+#Thu Apr 07 13:25:47 PDT 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -74,9 +74,6 @@ admin.product=Product Manager
 admin.product.altimages=Alternate Images
 admin.product.attributes=Custom Attributes
 admin.product.basicinfo=Basic Product Info
-admin.product.edit.addoption=Add Option
-admin.product.edit.addsku=Add SKU
-admin.product.edit.removesku=Remove SKU
 admin.product.categories=Categories
 admin.product.create=Create New Product
 admin.product.createproducttype=Add Product Type
@@ -100,6 +97,9 @@ admin.product.detail.tab.skus=SKUs
 admin.product.detail.tab.webdescription=Web Description
 admin.product.detailproducttype=Product Type Details
 admin.product.edit=Edit Product
+admin.product.edit.addoption=Add Option
+admin.product.edit.addsku=Add SKU
+admin.product.edit.removesku=Remove SKU
 admin.product.editproducttype=Edit Product Type
 admin.product.list=View All Products
 admin.product.listproducttypes=View Product Types
@@ -273,8 +273,8 @@ entity.option.optionName=Option Name
 entity.option.sortOrder=Sort Order
 entity.optiongroup.delete_success=The Option Group was successfully deleted.
 entity.optiongroup.delete_validatehasoptions=This option group cannot be deleted because it contains options.
-entity.optiongroup.isImageGroup=Product Image Group
-entity.optiongroup.isImageGroup_hint=If this is selected, then any product with options from this group will have different images
+entity.optiongroup.imageGroupFlag=Product Image Group
+entity.optiongroup.imageGroupFlag_hint=If this is selected, then any product with options from this group will have different images
 entity.optiongroup.optionGroupDescription=Option Group Description
 entity.optiongroup.optionGroupID=Option Group ID
 entity.optiongroup.optionGroupImage=Option Group Image
@@ -330,12 +330,12 @@ entity.postalcode.longitude=longitude
 entity.postalcode.postalCode=Postal Code
 entity.postalcode.state=state
 entity.product.active=Active
-entity.product.allowBackorder=Allow Backorders
-entity.product.allowDropship=Allow Dropship
-entity.product.allowPreorder=Allow Pre-Orders
-entity.product.allowShipping=Allow Shipping
+entity.product.allowBackorderFlag=Allow Backorders
+entity.product.allowDropshipFlag=Allow Dropship
+entity.product.allowPreorderFlag=Allow Pre-Orders
+entity.product.allowShippingFlag=Allow Shipping
 entity.product.brand=Brand
-entity.product.callToOrder=Call To Order
+entity.product.callToOrderFlag=Call To Order
 entity.product.createdDateTime=Date Create
 entity.product.dateFirstReceived=dateFirstReceived
 entity.product.dateLastReceived=dateLastReceived
@@ -360,6 +360,7 @@ entity.product.productName=Product Name
 entity.product.productType=Product Type
 entity.product.productYear=Product Year
 entity.product.productYear_title=Year
+entity.product.publishedFlag=Published
 entity.product.publishedWeight=Published Weight
 entity.product.qc=QC
 entity.product.qea=QEA
@@ -368,37 +369,29 @@ entity.product.qia=QIA
 entity.product.qoh=QOH
 entity.product.qoo=QOO
 entity.product.shippingWeight=Shipping Weight
-entity.product.showOnWeb=Show On Web Retail
-entity.product.showOnWebWholesale=Show On Web Wholesale
 entity.product.skus=skus
 entity.product.template=Design Template
 entity.product.title=title
-entity.product.trackInventory=Track Inventory
+entity.product.trackInventoryFlag=Track Inventory
 entity.product.webQC=webQC
 entity.product.webQEXP=webQEXP
 entity.product.webQOH=webQOH
-entity.product.webWholesaleQC=webWholesaleQC
-entity.product.webWholesaleQEXP=webWholesaleQEXP
-entity.product.webWholesaleQOH=webWholesaleQOH
 entity.productrelationship.product=product
 entity.productrelationship.productRelationshipID=productRelationshipID
 entity.productrelationship.relatedProduct=relatedProduct
 entity.productrelationship.relationshipType=relationshipType
 entity.producttype.Products=Products
-entity.producttype.allowBackorder=Products may be Backordered
-entity.producttype.allowDropship=Products may be Dropshipped
-entity.producttype.allowPreorder=Products may be Preordered
-entity.producttype.allowShipping=Products may be shipped
-entity.producttype.callToOrder=Allow Orders by Phone
+entity.producttype.allowBackorderFlag=Products may be Backordered
+entity.producttype.allowDropshipFlag=Products may be Dropshipped
+entity.producttype.allowPreorderFlag=Products may be Preordered
+entity.producttype.allowShippingFlag=Products may be shipped
+entity.producttype.callToOrderFlag=Allow Orders by Phone
 entity.producttype.delete_validateisassigned=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
-entity.producttype.manufactureDiscontinued=Discontinued by Manufacturer
 entity.producttype.parentProductType=Parent Product Type
 entity.producttype.productTypeID=productTypeID
 entity.producttype.productTypeName=Product Type Name
-entity.producttype.showOnWeb=Sold on Retail Website
-entity.producttype.showOnWebWholesale=Sold on Wholesale Website
 entity.producttype.subProductTypes=subProductTypes
-entity.producttype.trackInventory=Track Inventory
+entity.producttype.trackInventoryFlag=Track Inventory
 entity.profile.account=account
 entity.profile.profileID=profileID
 entity.profile.profileName=profileName
@@ -544,17 +537,13 @@ setting.order=Order
 setting.order.newOrderNotifyFrom=New Order Notification Email From
 setting.order.newOrderNotifyTo=New Order Notification Email To
 setting.product=Product
-setting.product.allowBackorder=Products can be Backordered
-setting.product.allowDropship=Products can be dropshipped
-setting.product.allowPreorder=Products can be Preordered
-setting.product.allowShipping=Products can be shipped.
-setting.product.callToOrder=Allow Orders by Phone
+setting.product.allowBackorderFlag=Products can be Backordered
+setting.product.allowDropshipFlag=Products can be dropshipped
+setting.product.allowPreorderFlag=Products can be Preordered
+setting.product.allowShippingFlag=Products can be shipped.
+setting.product.callToOrderFlag=Allow Orders by Phone
 setting.product.defaultProductTemplate=Default Product Template
-setting.product.manufactureDiscontinued=Discontinued by Manufacturer
-setting.product.nonInventory=Non-inventory Item
-setting.product.showOnWeb=Sold on Retail Website
-setting.product.showOnWebWholesale=Sold on Wholesale Website
-setting.product.trackInventory=Track Inventory
+setting.product.trackInventoryFlag=Track Inventory
 setting.product.urlKey=URL Key
 setting.settings=Settings
 setting.value=Value
