Fix for Issue #11 (Product type tree not refreshed in time with new/updated Product Types or Products)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -103,6 +103,7 @@ admin.product.edit.removesku=Remove SKU
 admin.product.editproducttype=Edit Product Type
 admin.product.list=View All Products
 admin.product.listproducttypes=View Product Types
+admin.product.noProductsDefined=No Products have been entered yet.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.productdetails=Product Details
