--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -76,6 +76,8 @@ admin.product.attributes=Custom Attributes
 admin.product.basicinfo=Basic Product Info
 admin.product.categories=Categories
 admin.product.create=Create New Product
+admin.product.create.disabled=Products cannot be created until the following actions are taken:
+admin.product.create.next=Next
 admin.product.createproducttype=Add Product Type
 admin.product.delete=Delete Product
 admin.product.delete_confirm=Are you sure you want to delete this product?
