Sku Codes generated from Product and option codes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -448,6 +448,7 @@ entity.shippingrate.shippingRateID=shippingRateID
 entity.shippingrate.shippingZone=shippingZone
 entity.sku.delete_success=The SKU was deleted successfully.
 entity.sku.delete_validateonesku=The SKU cannot be deleted because each product must have at least one SKU.
+entity.sku.delete_validateIsDefault=The SKU cannot be deleted because it is the default SKU for this product.
 entity.sku.imagePath=Image Path
 entity.sku.isDefault=Default
 entity.sku.listPrice=List Price
