--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -104,6 +104,7 @@ admin.product.edit.addsku=Add SKU
 admin.product.edit.removesku=Remove SKU
 admin.product.editproducttype=Edit Product Type
 admin.product.list=View All Products
+admin.product.list.inventoryNotTracked=Inventory is not tracked for this product.
 admin.product.listproducttypes=View Product Types
 admin.product.noProductsDefined=No Products have been entered yet.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
