--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -127,11 +127,15 @@ admin.product.saveproducttype_confirm=If you are adding a subtype or moving to a
 admin.product.saveproducttype_nav=Save
 admin.product.saveproducttype_success=The Product Type was successfully saved
 admin.product.selectbrand=Select Brand
+admin.product.selectImageForSku=Select an image to upload for the SKU
 admin.product.selectoptions=Select Options
 admin.product.selectparentproducttype=Select
 admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
 admin.product.showbasicinfo=Show Basic Product Info
+admin.product.uploadSkuImage=Upload Image
+admin.product.uploadSkuImage_success=The image was successfully uploaded.
+admin.product.uploadSkuImage_error=An error ocurred uploading the image or it was not a valid image file (jpg, png, or gif).
 admin.selectBox.select=Select
 admin.setting=Settings Manager
 admin.setting.createaddresszone=Create Address Zone
@@ -168,6 +172,7 @@ admin.setting.saveshippingmethod=Save Shipping Method
 admin.setting.saveshippingmethod_nav=Save
 admin.setting.saveshippingservice=Save Shipping Service
 admin.setting.saveshippingservice_nav=Save
+admin.sku.uploadImage=Upload Image
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 entity.account.accountEmails=Account Emails
@@ -451,6 +456,7 @@ entity.sku.delete_success=The SKU was deleted successfully.
 entity.sku.delete_validateonesku=The SKU cannot be deleted because each product must have at least one SKU.
 entity.sku.delete_validateIsDefault=The SKU cannot be deleted because it is the default SKU for this product.
 entity.sku.imagePath=Image Path
+entity.sku.image.exists=Image Exists
 entity.sku.isDefault=Default
 entity.sku.listPrice=List Price
 entity.sku.livePrice=Live Price
