Implemented Option Group sort ordering and changed js filenames.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -55,6 +55,7 @@ admin.option.optiongroup=Option Group
 admin.option.optiongroupfilter=Option Group Filter
 admin.option.optionlist=Option List
 admin.option.options=Options
+admin.option.order.handle=Drag
 admin.option.removeimage=Remove Current Image
 admin.option.removeoption=Remove Option
 admin.option.reorder=Reorder
@@ -70,6 +71,7 @@ admin.option.selectoptiongroupimage=Select Associated Option Group Image to Uplo
 admin.option.show=Show
 admin.option.showall=All
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
+admin.optionGroup.reorder=Reorder Option Groups
 admin.product=Product Manager
 admin.product.altimages=Alternate Images
 admin.product.attributes=Custom Attributes
