Settings updates and Product settings UI enhancements.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -111,7 +111,7 @@ admin.product.listproducttypes=View Product Types
 admin.product.noProductsDefined=No Products have been entered yet.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
-admin.product.productdetails=Product Details
+admin.product.productDetails=Product Details
 admin.product.productoptions=Product Options
 admin.product.productpages=Product Pages
 admin.product.productPages.noProductPagesAssigned=This product has not been assigned to any product pages.
@@ -134,6 +134,7 @@ admin.product.selectoptions=Select Options
 admin.product.selectparentproducttype=Select
 admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
+admin.product.setting.settingSource.notApplicable=N/A
 admin.product.showbasicinfo=Show Basic Product Info
 admin.product.uploadSkuImage=Upload Image
 admin.product.uploadSkuImage_success=The image was successfully uploaded.
@@ -438,8 +439,8 @@ entity.session.cart=cart
 entity.session.sessionID=sessionID
 entity.setting.global=Global Setting
 entity.setting.settingID=settingID
-entity.setting.settingName=settingName
-entity.setting.settingValue=settingValue
+entity.setting.settingName=Setting Name
+entity.setting.settingValue=Setting Value
 entity.shippingmethod.delete_success=Shipping Method was saved successfully
 entity.shippingmethod.shippingMethodID=Shipping Method ID
 entity.shippingmethod.shippingMethodName=Shipping Method Name
