Added granular info and access to setting assignments.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -118,7 +118,7 @@ admin.product.productPages.noProductPagesAssigned=This product has not been assi
 admin.product.productPages.pageTitle=Product Page Title
 admin.product.productPages.preview=Preview
 admin.product.productsettings=Product Settings
-admin.product.productSettingSource=Setting Source
+admin.product.settingDefinedIn=Defined In
 admin.product.producttypes=Product Types
 admin.product.producttypesettings=Product Type Settings
 admin.product.save=Save Product
@@ -139,6 +139,7 @@ admin.product.showbasicinfo=Show Basic Product Info
 admin.product.uploadSkuImage=Upload Image
 admin.product.uploadSkuImage_success=The image was successfully uploaded.
 admin.product.uploadSkuImage_error=An error ocurred uploading the image or it was not a valid image file (jpg, png, or gif).
+admin.productType.settingDefinedIn=Defined In
 admin.selectBox.select=Select
 admin.setting=Settings Manager
 admin.setting.createaddresszone=Create Address Zone
