Start of attribute/attribute set UI

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -4,6 +4,13 @@ admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
+admin.attribute=Attribute Set Manager
+admin.attribute.createAttributeSet=Add Attribute Set
+admin.attribute.list=Attribute Sets
+admin.attribute.listByAttributes=View List by Attributes
+admin.attribute.listByAttributeSets=View List by Attribute Sets
+admin.attribute.noAttributeSetsDefined=No Attribute Sets have been defined.
+admin.attribute.saveAttributeSet=Save Attribute Set
 admin.brand=Brand Manager
 admin.brand.create=Add Brand
 admin.brand.delete=Delete Brand
@@ -234,6 +241,11 @@ entity.attribute.attrinuteOptions=attrinuteOptions
 entity.attributeoption.attribute=attribute
 entity.attributeoption.attributeOptionID=attributeOptionID
 entity.attributeoption.attributeOptionValue=attributeOptionValue
+entity.attributeSet.attributeSetDescription=Attribute Set Description
+entity.attributeSet.attributeSetName=Attribute Set Name
+entity.attributeSet.attributeSetType=Attribute Set Type
+entity.attributeSet.globalFlag=Global Attribute Set
+entity.attributeSet.globalFlag_hint=Setting this to yes will make this attribute set automatically available based on the attribute set type selected. Otherwise you will need to explicitly assign the attribute set to where you want to use it.
 entity.attributevalue.account=account
 entity.attributevalue.attribute=attribute
 entity.attributevalue.attributeValue=attributeValue
