--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Apr 18 20:25:47 PDT 2011
+#Wed Apr 20 15:12:24 PDT 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -13,8 +13,8 @@ admin.attribute.deleteAttributeSet_confirm=Are you sure you want to delete this 
 admin.attribute.detailattributeset=Attribute Set Details
 admin.attribute.editAttributeSet=Edit Attribute Set
 admin.attribute.list=Attribute Sets
-admin.attribute.listByAttributes=View List by Attributes
 admin.attribute.listByAttributeSets=View List by Attribute Sets
+admin.attribute.listByAttributes=View List by Attributes
 admin.attribute.noAttributeSetsDefined=No Attribute Sets have been defined.
 admin.attribute.noAttributesInSet=There are currently no attributes defined in this Attribute Set
 admin.attribute.order.handle=Drag
@@ -89,15 +89,15 @@ admin.option.saveorder=Save Order
 admin.option.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
 admin.option.show=Show
 admin.option.showall=All
-admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.optionGroup.reorder=Reorder Option Groups
+admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.product=Product Manager
 admin.product.altimages=Alternate Images
 admin.product.attributes=Custom Attributes
 admin.product.basicinfo=Basic Product Info
 admin.product.categories=Categories
 admin.product.create=Create New Product
-admin.product.create.disabled=Products cannot be created until the following actions are taken:
+admin.product.create.disabled=Products cannot be created until the following actions are taken\:
 admin.product.create.next=Next
 admin.product.createproducttype=Add Product Type
 admin.product.delete=Delete Product
@@ -131,13 +131,12 @@ admin.product.noProductsDefined=No Products have been entered yet.
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.productDetails=Product Details
-admin.product.productoptions=Product Options
-admin.product.productpages=Product Pages
 admin.product.productPages.noProductPagesAssigned=This product has not been assigned to any product pages.
 admin.product.productPages.pageTitle=Product Page Title
 admin.product.productPages.preview=Preview
+admin.product.productoptions=Product Options
+admin.product.productpages=Product Pages
 admin.product.productsettings=Product Settings
-admin.product.settingDefinedIn=Defined In
 admin.product.producttypes=Product Types
 admin.product.producttypesettings=Product Type Settings
 admin.product.save=Save Product
@@ -147,17 +146,18 @@ admin.product.saveproducttype=Save Product Type
 admin.product.saveproducttype_confirm=If you are adding a subtype or moving to a new parent type, all products in the new parent will be re-assigned to the new subtype. Continue?
 admin.product.saveproducttype_nav=Save
 admin.product.saveproducttype_success=The Product Type was successfully saved
-admin.product.selectbrand=Select Brand
 admin.product.selectImageForSku=Select an image to upload for the SKU
+admin.product.selectbrand=Select Brand
 admin.product.selectoptions=Select Options
 admin.product.selectparentproducttype=Select
 admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
 admin.product.setting.settingSource.notApplicable=N/A
+admin.product.settingDefinedIn=Defined In
 admin.product.showbasicinfo=Show Basic Product Info
 admin.product.uploadSkuImage=Upload Image
-admin.product.uploadSkuImage_success=The image was successfully uploaded.
 admin.product.uploadSkuImage_error=An error ocurred uploading the image or it was not a valid image file (jpg, png, or gif).
+admin.product.uploadSkuImage_success=The image was successfully uploaded.
 admin.productType.settingDefinedIn=Defined In
 admin.selectBox.select=Select
 admin.setting=Settings Manager
@@ -169,11 +169,13 @@ admin.setting.deleteshippingmethod_confirm=Are you sure you want to delete this 
 admin.setting.deleteshippingmethod_nav=Delete
 admin.setting.deleteshippingmethod_success=Shipping Method Deleted
 admin.setting.detail=Global Settings
+admin.setting.detailaddresszone=Address Zone Detail
 admin.setting.detailintegration=Integration Setup
 admin.setting.detailpermissions=User Permissions
 admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.detailshippingservice=Shipping Service Detail
 admin.setting.edit=Edit Global Settings
+admin.setting.editaddresszone=Edit Address Zone
 admin.setting.editpermissions=Edit Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
 admin.setting.editshippingservice=Configure Shipping Service
@@ -193,6 +195,7 @@ admin.setting.save_nav=Save
 admin.setting.saveaddresszone_nav=Save
 admin.setting.saveshippingmethod=Save Shipping Method
 admin.setting.saveshippingmethod_nav=Save
+admin.setting.saveshippingmethod_success=Shipping Method Saved
 admin.setting.saveshippingservice=Save Shipping Service
 admin.setting.saveshippingservice_nav=Save
 admin.sku.uploadImage=Upload Image
@@ -249,22 +252,22 @@ entity.attribute.attributeClassType=attributeClassType
 entity.attribute.attributeHint=Attribute Hint
 entity.attribute.attributeID=attributeID
 entity.attribute.attributeName=Attribute Name
-entity.attribute.attributeType=Input Type
 entity.attribute.attributeOptions=Attribute Options
+entity.attribute.attributeType=Input Type
 entity.attribute.defaultValue=Default Value
 entity.attribute.requiredFlag=Required
 entity.attribute.validationMessage=Validation Message
-entity.attribute.validationType=Validate
 entity.attribute.validationRegex=Validation Regex
-entity.attributeoption.attribute=Attribute
-entity.attributeoption.attributeOptionID=attributeOptionID
-entity.attributeoption.attributeOptionValue=attributeOptionValue
-entity.attributeSet.attributes=Attributes
+entity.attribute.validationType=Validate
 entity.attributeSet.attributeSetDescription=Attribute Set Description
 entity.attributeSet.attributeSetName=Attribute Set Name
 entity.attributeSet.attributeSetType=Attribute Set Type
+entity.attributeSet.attributes=Attributes
 entity.attributeSet.globalFlag=Global Attribute Set
 entity.attributeSet.globalFlag_hint=Setting this to yes will make this attribute set automatically available based on the attribute set type selected. Otherwise you will need to explicitly assign the attribute set to where you want to use it.
+entity.attributeoption.attribute=Attribute
+entity.attributeoption.attributeOptionID=attributeOptionID
+entity.attributeoption.attributeOptionValue=attributeOptionValue
 entity.attributevalue.account=account
 entity.attributevalue.attribute=attribute
 entity.attributevalue.attributeValue=attributeValue
@@ -426,11 +429,11 @@ entity.product.trackInventoryFlag=Track Inventory
 entity.product.webQC=webQC
 entity.product.webQEXP=webQEXP
 entity.product.webQOH=webQOH
+entity.productType=Product Type
 entity.productrelationship.product=product
 entity.productrelationship.productRelationshipID=productRelationshipID
 entity.productrelationship.relatedProduct=relatedProduct
 entity.productrelationship.relationshipType=relationshipType
-entity.productType=Product Type
 entity.producttype.Products=Products
 entity.producttype.allowBackorderFlag=Allow Backorders
 entity.producttype.allowDropshipFlag=Allow Dropship
@@ -488,10 +491,10 @@ entity.shippingrate.shippingMethod=shippingMethod
 entity.shippingrate.shippingRateID=shippingRateID
 entity.shippingrate.shippingZone=shippingZone
 entity.sku.delete_success=The SKU was deleted successfully.
-entity.sku.delete_validateonesku=The SKU cannot be deleted because each product must have at least one SKU.
 entity.sku.delete_validateIsDefault=The SKU cannot be deleted because it is the default SKU for this product.
-entity.sku.imagePath=Image Path
+entity.sku.delete_validateonesku=The SKU cannot be deleted because each product must have at least one SKU.
 entity.sku.image.exists=Image Exists
+entity.sku.imagePath=Image Path
 entity.sku.isDefault=Default
 entity.sku.listPrice=List Price
 entity.sku.livePrice=Live Price
