UI for dynamically adding Attribute Options to Attributes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -6,6 +6,9 @@ admin.account.list=Account Listing
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
 admin.attribute=Attribute Set Manager
 admin.attribute.addAttribute=Add Attribute
+admin.attribute.addOption=Add Option
+admin.attribute.attributeOptionValue=Value
+admin.attribute.attributeOptionLabel=Label (optional)
 admin.attribute.closeForm=Close
 admin.attribute.create=Manage Attribute Set
 admin.attribute.createAttributeSet=Add Attribute Set
@@ -18,8 +21,10 @@ admin.attribute.listByAttributes=View List by Attributes
 admin.attribute.noAttributeSetsDefined=No Attribute Sets have been defined.
 admin.attribute.noAttributesInSet=There are currently no attributes defined in this Attribute Set
 admin.attribute.order.handle=Drag
+admin.attribute.removeOption=Remove Option
 admin.attribute.reorder=Reorder Attributes
 admin.attribute.save=Save
+admin.attribute.save_success=The Attribute was successfully saved
 admin.attribute.saveAttributeSet=Save Attribute Set
 admin.attribute.saveAttributeSet_success=The Attribute Set was successfully saved
 admin.attribute.saveOrder=Save Order
