--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,14 +1,19 @@
 #Created by JInto - www.guh-software.de
-#Wed Apr 20 15:12:24 PDT 2011
+#Mon Apr 25 15:16:53 PDT 2011
 admin.account=Account Manager
+admin.account.create=Create New Account
 admin.account.detail=Account Detail
+admin.account.edit=Edit Account
 admin.account.list=Account Listing
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
+admin.account.save=Save Account
+admin.account.save_nav=Save
+admin.account.save_success=The Account was sucessfully saved
 admin.attribute=Attribute Set Manager
 admin.attribute.addAttribute=Add Attribute
 admin.attribute.addOption=Add Option
-admin.attribute.attributeOptionValue=Value
 admin.attribute.attributeOptionLabel=Label (optional)
+admin.attribute.attributeOptionValue=Value
 admin.attribute.closeForm=Close
 admin.attribute.create=Manage Attribute Set
 admin.attribute.createAttributeSet=Add Attribute Set
@@ -24,10 +29,10 @@ admin.attribute.order.handle=Drag
 admin.attribute.removeOption=Remove Option
 admin.attribute.reorder=Reorder Attributes
 admin.attribute.save=Save
-admin.attribute.save_success=The Attribute was successfully saved
 admin.attribute.saveAttributeSet=Save Attribute Set
 admin.attribute.saveAttributeSet_success=The Attribute Set was successfully saved
 admin.attribute.saveOrder=Save Order
+admin.attribute.save_success=The Attribute was successfully saved
 admin.brand=Brand Manager
 admin.brand.create=Add Brand
 admin.brand.delete=Delete Brand
@@ -123,10 +128,10 @@ admin.product.detail.tab.productpages=Product Pages
 admin.product.detail.tab.productsettings=Product Settings
 admin.product.detail.tab.skus=SKUs
 admin.product.detail.tab.webdescription=Web Description
-admin.product.detailproducttype=Product Type Details
-admin.product.detailProductType.tabSettings=Settings
-admin.product.detailProductType.tabAttributeSets=Attribute Sets
 admin.product.detailProductType.attributeSetAssigned=Assigned?
+admin.product.detailProductType.tabAttributeSets=Attribute Sets
+admin.product.detailProductType.tabSettings=Settings
+admin.product.detailproducttype=Product Type Details
 admin.product.edit=Edit Product
 admin.product.edit.addoption=Add Option
 admin.product.edit.addsku=Add SKU
@@ -257,10 +262,10 @@ entity.addresszonelocation.postalCode=Postal Code
 entity.addresszonelocation.state=state
 entity.attribute.activeFlag=Active
 entity.attribute.attributeClassType=attributeClassType
+entity.attribute.attributeDescription=Attribute Description
 entity.attribute.attributeHint=Attribute Hint
 entity.attribute.attributeID=attributeID
 entity.attribute.attributeName=Attribute Name
-entity.attribute.attributeDescription=Attribute Description
 entity.attribute.attributeOptions=Attribute Options
 entity.attribute.attributeType=Input Type
 entity.attribute.defaultValue=Default Value
