Fixed Global Settings to add Image sizes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Apr 25 15:16:53 PDT 2011
+#Tue Apr 26 09:41:40 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -614,6 +614,12 @@ setting.product.allowPreorderFlag=Products can be Preordered
 setting.product.allowShippingFlag=Products can be shipped.
 setting.product.callToOrderFlag=Allow Orders by Phone
 setting.product.defaultProductTemplate=Default Product Template
+setting.product.imageHeightLarge=Large Image Height
+setting.product.imageHeightMedium=Medium Image Height
+setting.product.imageHeightSmall=Small Image Height
+setting.product.imageWidthLarge=Large Image Width
+setting.product.imageWidthMedium=Medium Image Width
+setting.product.imageWidthSmall=Small Image Width
 setting.product.trackInventoryFlag=Track Inventory
 setting.product.urlKey=URL Key
 setting.settings=Settings
