Added ability to sort and delete attribute options (Issue #48)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -17,6 +17,9 @@ admin.attribute.attributeOptionValue=Value
 admin.attribute.closeForm=Close
 admin.attribute.create=Manage Attribute Set
 admin.attribute.createAttributeSet=Add Attribute Set
+admin.attribute.delete_confirm=Are you sure you want to delete this attribute?
+admin.attribute.deleteAttributeOption=Delete
+admin.attribute.deleteAttributeOption_confirm=Are you sure you want to delete this Attribute Option?
 admin.attribute.deleteAttributeSet_confirm=Are you sure you want to delete this Attribute Set?
 admin.attribute.detailattributeset=Attribute Set Details
 admin.attribute.editAttributeSet=Edit Attribute Set
@@ -268,11 +271,13 @@ entity.attribute.attributeID=attributeID
 entity.attribute.attributeName=Attribute Name
 entity.attribute.attributeOptions=Attribute Options
 entity.attribute.attributeType=Input Type
+entity.attribute.delete_success=The Attribuite was successfully deleted.
 entity.attribute.defaultValue=Default Value
 entity.attribute.requiredFlag=Required
 entity.attribute.validationMessage=Validation Message
 entity.attribute.validationRegex=Validation Regex
 entity.attribute.validationType=Validate
+entity.attributeOption.delete_success=Attribute option deleted.
 entity.attributeSet.attributeSetDescription=Attribute Set Description
 entity.attributeSet.attributeSetName=Attribute Set Name
 entity.attributeSet.attributeSetType=Attribute Set Type
@@ -281,7 +286,9 @@ entity.attributeSet.globalFlag=Global Attribute Set
 entity.attributeSet.globalFlag_hint=Setting this to yes will make this attribute set automatically available based on the attribute set type selected. Otherwise you will need to explicitly assign the attribute set to where you want to use it.
 entity.attributeoption.attribute=Attribute
 entity.attributeoption.attributeOptionID=attributeOptionID
-entity.attributeoption.attributeOptionValue=attributeOptionValue
+entity.attributeoption.attributeOptionLabel=Label
+entity.attributeoption.attributeOptionValue=Value
+entity.attributeoption.sortOrder=Sort Order
 entity.attributevalue.account=account
 entity.attributevalue.attribute=attribute
 entity.attributevalue.attributeValue=attributeValue
