Changed submit buttons from buttons to input tags to get around IE form submission issue (Issue# 50)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -51,6 +51,8 @@ admin.brand.nobrandsdefined=There are currently no product brands defined.
 admin.brand.save=Save Brand
 admin.brand.save_nav=Save
 admin.brand.save_success=Brand was saved successfully
+admin.campaignLink.add=Add
+admin.campaingLink.create=Create
 admin.help=Help
 admin.help.about=About Slatwall
 admin.main=Dashboard
@@ -104,6 +106,7 @@ admin.option.show=Show
 admin.option.showall=All
 admin.optionGroup.reorder=Reorder Option Groups
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
+admin.order.search=Search
 admin.product=Product Manager
 admin.product.altimages=Alternate Images
 admin.product.attributes=Custom Attributes
@@ -162,6 +165,7 @@ admin.product.saveproducttype=Save Product Type
 admin.product.saveproducttype_confirm=If you are adding a subtype or moving to a new parent type, all products in the new parent will be re-assigned to the new subtype. Continue?
 admin.product.saveproducttype_nav=Save
 admin.product.saveproducttype_success=The Product Type was successfully saved
+admin.product.search=Search
 admin.product.selectImageForSku=Select an image to upload for the SKU
 admin.product.selectbrand=Select Brand
 admin.product.selectoptions=Select Options
@@ -209,6 +213,8 @@ admin.setting.listshippingservices_nav=Configure Shipping Services
 admin.setting.save=Save Settings
 admin.setting.save_nav=Save
 admin.setting.saveaddresszone_nav=Save
+admin.setting.savePermissions=Save Permissions
+admin.setting.savePermissions_nav=Save
 admin.setting.saveshippingmethod=Save Shipping Method
 admin.setting.saveshippingmethod_nav=Save
 admin.setting.saveshippingmethod_success=Shipping Method Saved
