--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Apr 26 09:41:40 PDT 2011
+#Thu Apr 28 17:39:21 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -17,10 +17,10 @@ admin.attribute.attributeOptionValue=Value
 admin.attribute.closeForm=Close
 admin.attribute.create=Manage Attribute Set
 admin.attribute.createAttributeSet=Add Attribute Set
-admin.attribute.delete_confirm=Are you sure you want to delete this attribute?
 admin.attribute.deleteAttributeOption=Delete
 admin.attribute.deleteAttributeOption_confirm=Are you sure you want to delete this Attribute Option?
 admin.attribute.deleteAttributeSet_confirm=Are you sure you want to delete this Attribute Set?
+admin.attribute.delete_confirm=Are you sure you want to delete this attribute?
 admin.attribute.detailattributeset=Attribute Set Details
 admin.attribute.editAttributeSet=Edit Attribute Set
 admin.attribute.list=Attribute Sets
@@ -211,10 +211,10 @@ admin.setting.listshippingservices=Shipping Service Listing
 admin.setting.listshippingservices.servicedisplayname=Shipping Service
 admin.setting.listshippingservices_nav=Configure Shipping Services
 admin.setting.save=Save Settings
-admin.setting.save_nav=Save
-admin.setting.saveaddresszone_nav=Save
 admin.setting.savePermissions=Save Permissions
 admin.setting.savePermissions_nav=Save
+admin.setting.save_nav=Save
+admin.setting.saveaddresszone_nav=Save
 admin.setting.saveshippingmethod=Save Shipping Method
 admin.setting.saveshippingmethod_nav=Save
 admin.setting.saveshippingmethod_success=Shipping Method Saved
@@ -277,8 +277,8 @@ entity.attribute.attributeID=attributeID
 entity.attribute.attributeName=Attribute Name
 entity.attribute.attributeOptions=Attribute Options
 entity.attribute.attributeType=Input Type
-entity.attribute.delete_success=The Attribuite was successfully deleted.
 entity.attribute.defaultValue=Default Value
+entity.attribute.delete_success=The Attribuite was successfully deleted.
 entity.attribute.requiredFlag=Required
 entity.attribute.validationMessage=Validation Message
 entity.attribute.validationRegex=Validation Regex
@@ -633,6 +633,7 @@ setting.product.imageHeightSmall=Small Image Height
 setting.product.imageWidthLarge=Large Image Width
 setting.product.imageWidthMedium=Medium Image Width
 setting.product.imageWidthSmall=Small Image Width
+setting.product.imageextension=Image Extension
 setting.product.trackInventoryFlag=Track Inventory
 setting.product.urlKey=URL Key
 setting.settings=Settings
