--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Apr 29 08:35:36 PDT 2011
+#Fri Apr 29 09:10:44 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -634,6 +634,7 @@ setting.product.imageWidthLarge=Large Image Width
 setting.product.imageWidthMedium=Medium Image Width
 setting.product.imageWidthSmall=Small Image Width
 setting.product.imageextension=Image Extension
+setting.product.missingimagepath=Missing Image Path
 setting.product.trackInventoryFlag=Track Inventory
 setting.product.urlKey=URL Key
 setting.settings=Settings
