Fixed typo in RB

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -278,7 +278,7 @@ entity.attribute.attributeName=Attribute Name
 entity.attribute.attributeOptions=Attribute Options
 entity.attribute.attributeType=Input Type
 entity.attribute.defaultValue=Default Value
-entity.attribute.delete_success=The Attribuite was successfully deleted.
+entity.attribute.delete_success=The Attribute was successfully deleted.
 entity.attribute.requiredFlag=Required
 entity.attribute.validationMessage=Validation Message
 entity.attribute.validationRegex=Validation Regex
