Added Description to Product Type

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri Apr 29 09:10:44 PDT 2011
+#Mon May 02 13:05:46 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -136,6 +136,7 @@ admin.product.detail.tab.skus=SKUs
 admin.product.detail.tab.webdescription=Web Description
 admin.product.detailProductType.attributeSetAssigned=Assigned?
 admin.product.detailProductType.tabAttributeSets=Attribute Sets
+admin.product.detailProductType.tabDescription=Web Description
 admin.product.detailProductType.tabSettings=Settings
 admin.product.detailproducttype=Product Type Details
 admin.product.edit=Edit Product
@@ -457,6 +458,7 @@ entity.product.webQC=webQC
 entity.product.webQEXP=webQEXP
 entity.product.webQOH=webQOH
 entity.productType=Product Type
+entity.productTypeDescription=Product Type Description
 entity.productrelationship.product=product
 entity.productrelationship.productRelationshipID=productRelationshipID
 entity.productrelationship.relatedProduct=relatedProduct
