Fixed some small bugs around the new attribute setup

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon May 02 13:05:46 PDT 2011
+#Mon May 02 16:53:53 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -224,6 +224,11 @@ admin.setting.saveshippingservice_nav=Save
 admin.sku.uploadImage=Upload Image
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
+define.cancel=Cancel
+define.global=Global
+define.no=No
+define.save=Save
+define.yes=Yes
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
 entity.account.company=Company
