--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -112,10 +112,12 @@ admin.product.altimages=Alternate Images
 admin.product.attributes=Custom Attributes
 admin.product.basicinfo=Basic Product Info
 admin.product.categories=Categories
+admin.product.changeParentProductType_confirm=If you are adding a subtype or moving to a new parent type, all products in the new parent will be re-assigned to the new subtype. Continue?
 admin.product.create=Create New Product
 admin.product.create.disabled=Products cannot be created until the following actions are taken\:
 admin.product.create.next=Next
 admin.product.createproducttype=Add Product Type
+admin.product.createProductType_confirm=Adding a subtype here will re-assign any products in the parent to the new subtype. Continue?
 admin.product.delete=Delete Product
 admin.product.delete_confirm=Are you sure you want to delete this product?
 admin.product.delete_nav=Delete
@@ -163,7 +165,6 @@ admin.product.save=Save Product
 admin.product.save_nav=Save
 admin.product.save_success=The Product was successfully saved
 admin.product.saveproducttype=Save Product Type
-admin.product.saveproducttype_confirm=If you are adding a subtype or moving to a new parent type, all products in the new parent will be re-assigned to the new subtype. Continue?
 admin.product.saveproducttype_nav=Save
 admin.product.saveproducttype_success=The Product Type was successfully saved
 admin.product.search=Search
