--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed May 04 16:01:14 EDT 2011
+#Wed May 04 18:09:52 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -442,6 +442,7 @@ entity.product.options=Product Options
 entity.product.originalPrice=originalPrice
 entity.product.price=Price
 entity.product.productCode=Product Code
+entity.product.productCode_validateUnique=The product code is already in use for another product.
 entity.product.productDescription=Product Description
 entity.product.productID=productID
 entity.product.productName=Product Name
