Fixed some product validation bugs.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu May 05 22:42:40 EDT 2011
+#Fri May 06 23:37:44 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -162,6 +162,7 @@ admin.product.productsettings=Product Settings
 admin.product.producttypes=Product Types
 admin.product.producttypesettings=Product Type Settings
 admin.product.save=Save Product
+admin.product.save_error=Please correct any error(s) indicated below and re-submit the form.
 admin.product.save_nav=Save
 admin.product.save_success=The Product was successfully saved
 admin.product.saveproducttype=Save Product Type
