Fixed some persistence bugs in option and attribute admins.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Fri May 06 23:37:44 EDT 2011
+#Sun May 08 11:13:25 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -22,6 +22,7 @@ admin.attribute.deleteAttributeOption_confirm=Are you sure you want to delete th
 admin.attribute.deleteAttributeSet_confirm=Are you sure you want to delete this Attribute Set?
 admin.attribute.delete_confirm=Are you sure you want to delete this attribute?
 admin.attribute.detailattributeset=Attribute Set Details
+admin.attribute.edit=Manage Attribute Set
 admin.attribute.editAttributeSet=Edit Attribute Set
 admin.attribute.list=Attribute Sets
 admin.attribute.listByAttributeSets=View List by Attribute Sets
@@ -74,9 +75,8 @@ admin.option.deleteoptiongroup_confirm=Are you sure you want to delete this Opti
 admin.option.deleteoptiongroup_disabled=This option group cannot be deleted because it contains options.
 admin.option.deleteoptiongroup_success=The option group was successfully deleted.
 admin.option.detailoptiongroup=Option Group Details
-admin.option.edit=Edit Option Group
-admin.option.editoption=Manage Option Group
-admin.option.editoptiongroup=Edit Option Group
+admin.option.edit=Manage Option Group
+admin.option.editOptionGroup=Edit Option Group
 admin.option.edittoggle.showhide=Show,Hide
 admin.option.list=Product Options
 admin.option.listbyoptiongroups=View List By Option Groups
