--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun May 08 11:13:25 EDT 2011
+#Mon May 09 23:00:36 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -250,10 +250,10 @@ entity.accountemail.account=account
 entity.accountemail.accountEmailID=accountEmailID
 entity.accountemail.email=email
 entity.accountemail.isPrimary=isPrimary
-entity.accountphone.account=account
-entity.accountphone.accountPhoneID=accountPhoneID
-entity.accountphone.accountPhoneType=accountPhoneType
-entity.accountphone.phone=phone
+entity.accountphoneNumber.account=account
+entity.accountphoneNumber.accountPhoneNumberID=accountPhoneNumberID
+entity.accountphoneNumber.accountPhoneType=accountPhoneType
+entity.accountphoneNumber.phone=phone
 entity.accountrelationship.account=account
 entity.accountrelationship.accountRelationshipID=accountRelationshipID
 entity.accountrelationship.relatedAccount=relatedAccount
