Payment services admin UI and started payment methods admin.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon May 09 23:00:36 EDT 2011
+#Tue May 17 00:43:03 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -187,21 +187,32 @@ admin.setting=Settings Manager
 admin.setting.createaddresszone=Create Address Zone
 admin.setting.createshippingmethod=Create Shipping Method
 admin.setting.dashboard=Settings Manager
+admin.setting.deletePaymentMehod_confirm=Are you sure you want to delete this Payment Method?
+admin.setting.deletePaymentMethod=Delete Payment Method
+admin.setting.deletePaymentMethod_nav=Delete
 admin.setting.deleteshippingmethod=Delete Shipping Method
 admin.setting.deleteshippingmethod_confirm=Are you sure you want to delete this Shipping Method?
 admin.setting.deleteshippingmethod_nav=Delete
 admin.setting.deleteshippingmethod_success=Shipping Method Deleted
 admin.setting.detail=Global Settings
+admin.setting.detailPaymentMethod=Payment Method Detail
 admin.setting.detailaddresszone=Address Zone Detail
 admin.setting.detailintegration=Integration Setup
 admin.setting.detailpermissions=User Permissions
 admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.detailshippingservice=Shipping Service Detail
 admin.setting.edit=Edit Global Settings
+admin.setting.editPaymentMethod=Edit Payment Method
+admin.setting.editPaymentMethod_nav=Edit
+admin.setting.editPaymentService=Configure Payment Service
+admin.setting.editPaymentService_nav=Configure
 admin.setting.editaddresszone=Edit Address Zone
 admin.setting.editpermissions=Edit Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
 admin.setting.editshippingservice=Configure Shipping Service
+admin.setting.listPaymentServices=Payment Service Listing
+admin.setting.listPaymentServices.servicedisplayname=Payment Service
+admin.setting.listPaymentServices_nav=Configure Payment Services
 admin.setting.listaddresszones=Address Zone Listing
 admin.setting.listaddresszones_nav=Address Zones
 admin.setting.listintegrationservices=Integration Services Listing
@@ -213,7 +224,14 @@ admin.setting.listshippingmethods_nav=Shipping Methods
 admin.setting.listshippingservices=Shipping Service Listing
 admin.setting.listshippingservices.servicedisplayname=Shipping Service
 admin.setting.listshippingservices_nav=Configure Shipping Services
+admin.setting.paymentMethod.creditCard=Credit Card
+admin.setting.paymentMethod.creditCardsAccepted=Credit Cards Accepted
 admin.setting.save=Save Settings
+admin.setting.savePaymentMethod=Save Payment Method
+admin.setting.savePaymentMethod_nav=Save
+admin.setting.savePaymentMethod_success=Payment Method Saved
+admin.setting.savePaymentService=Save Payment Service
+admin.setting.savePaymentService_nav=Save
 admin.setting.savePermissions=Save Permissions
 admin.setting.savePermissions_nav=Save
 admin.setting.save_nav=Save
@@ -408,9 +426,10 @@ entity.ordershipping.cost=cost
 entity.ordershipping.orderShippingID=orderShippingID
 entity.ordershipping.orderShippingItems=orderShippingItems
 entity.ordershipping.shippingMethod=shippingMethod
-entity.paymentmethod.paymentMethodID=paymentMethodID
-entity.paymentmethod.paymentMethodName=paymentMethodName
-entity.paymentmethod.providerGateway=providerGateway
+entity.paymentMethod.activeFlag=Active
+entity.paymentMethod.paymentMethodCode=Payment Method Code
+entity.paymentmethod.paymentMethodID=Payment Method ID
+entity.paymentmethod.providerGateway=Payment Provider Gateway
 entity.postalcode.city=city
 entity.postalcode.country=country
 entity.postalcode.latitude=latitude
