"Payment method edit/save (credit card)"

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue May 17 00:43:03 EDT 2011
+#Tue May 17 21:07:17 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -203,7 +203,6 @@ admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.detailshippingservice=Shipping Service Detail
 admin.setting.edit=Edit Global Settings
 admin.setting.editPaymentMethod=Edit Payment Method
-admin.setting.editPaymentMethod_nav=Edit
 admin.setting.editPaymentService=Configure Payment Service
 admin.setting.editPaymentService_nav=Configure
 admin.setting.editaddresszone=Edit Address Zone
@@ -248,6 +247,7 @@ define.cancel=Cancel
 define.global=Global
 define.no=No
 define.save=Save
+define.select=Select
 define.yes=Yes
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
