Fixed bug in URL validator. (Issue 100)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue May 17 21:07:17 EDT 2011
+#Wed May 18 20:32:15 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -336,6 +336,7 @@ entity.brand.brandName=Brand Name
 entity.brand.brandVendors=brandVendors
 entity.brand.brandWebsite=Brand Website
 entity.brand.delete_Validateisassigned=Brand cannot be deleted because it has been assigned to products
+entity.brand.delete_success=Brand deleted
 entity.cart.account=account
 entity.cart.cartID=cartID
 entity.cart.cartItems=cartItems
