--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -701,7 +701,9 @@ validator.inlist=The value for {objectLabel} is not in the list {list}.
 validator.ismatch=The value for {objectLabel} is not the same as {ismatch}.
 validator.lowercase={objectValue} must be lower case.
 validator.max={objectValue} must be less than or equal to {max}.
+validator.maxlength={objectLabel} must be no longer than {criteria} characters.
 validator.min={objectValue} must be greater than or equal to {min}.
+validator.minlength={objectLabel} must be at least {criteria} characters long.
 validator.notempty=The field {objectLabel} must contain a value.
 validator.notinlist=The value for {objectLabel} is in the list {list} and should not be.
 validator.notnull=The field {objectLabel} must not be a null value.
