Updated Shipping method processing

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed May 18 20:32:15 EDT 2011
+#Sat May 21 11:16:24 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.detail=Account Detail
@@ -646,8 +646,10 @@ entity.vendorskustock.vendor=vendor
 entity.vendorskustock.vendorSkuStockID=vendorSkuStockID
 frontend.account.detail=My Account
 frontend.account.edit=Edit Account
+frontend.cart.clearItems=Clear All Cart Items
 frontend.cart.detail=Shopping Cart
 frontend.cart.detail.noitems=There are currently no items in your cart.
+frontend.cart.update=Update Cart
 frontend.checkout.detail=Checkout
 setting=Setting
 setting.account=Account
