Misc. Asthetic changes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,7 +1,10 @@
 #Created by JInto - www.guh-software.de
-#Sat May 21 11:16:24 PDT 2011
+#Sat May 21 19:43:13 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
+admin.account.delete=Delete Account
+admin.account.delete_confirm=Are you sure that you would like to delete this account?
+admin.account.delete_nav=Delete
 admin.account.detail=Account Detail
 admin.account.edit=Edit Account
 admin.account.list=Account Listing
@@ -252,6 +255,7 @@ define.yes=Yes
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
 entity.account.company=Company
+entity.account.delete_success=Account Deleted Successfully
 entity.account.firstName=First Name
 entity.account.lastName=Last Name
 entity.account.muraUser=Mura User
@@ -349,6 +353,7 @@ entity.contentproduct.contentProductID=contentProductID
 entity.contentproduct.product=product
 entity.country.countryCode=Country Code
 entity.country.countryName=Country Name
+entity.createdDateTime=Created
 entity.historyorder.historyDateTime=historyDateTime
 entity.historyorder.historyOrderID=historyOrderID
 entity.historyorder.order=order
@@ -367,6 +372,7 @@ entity.location.locationID=locationID
 entity.location.locationName=locationName
 entity.location.sellStockOnWeb=sellStockOnWeb
 entity.location.sellStockOnWebWholesale=sellStockOnWebWholesale
+entity.modifiedDateTime=Last Changed
 entity.option.delete_success=The Option was successfully deleted.
 entity.option.delete_validatehasskus=This option cannot be deleted because it is associated with product SKUs.
 entity.option.optionCode=Option Code
