More Misc. Updates

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat May 21 19:43:13 PDT 2011
+#Sat May 21 20:04:30 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -109,6 +109,7 @@ admin.option.show=Show
 admin.option.showall=All
 admin.optionGroup.reorder=Reorder Option Groups
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
+admin.order.list=View All Orders
 admin.order.search=Search
 admin.product=Product Manager
 admin.product.altimages=Alternate Images
@@ -257,6 +258,7 @@ entity.account.accountID=Account ID
 entity.account.company=Company
 entity.account.delete_success=Account Deleted Successfully
 entity.account.firstName=First Name
+entity.account.fullname=Name
 entity.account.lastName=Last Name
 entity.account.muraUser=Mura User
 entity.account.primaryEmail=Primary Email
@@ -353,6 +355,7 @@ entity.contentproduct.contentProductID=contentProductID
 entity.contentproduct.product=product
 entity.country.countryCode=Country Code
 entity.country.countryName=Country Name
+entity.createdByAccount=Created By
 entity.createdDateTime=Created
 entity.historyorder.historyDateTime=historyDateTime
 entity.historyorder.historyOrderID=historyOrderID
@@ -372,6 +375,7 @@ entity.location.locationID=locationID
 entity.location.locationName=locationName
 entity.location.sellStockOnWeb=sellStockOnWeb
 entity.location.sellStockOnWebWholesale=sellStockOnWebWholesale
+entity.modifiedByAccount=Modified By
 entity.modifiedDateTime=Last Changed
 entity.option.delete_success=The Option was successfully deleted.
 entity.option.delete_validatehasskus=This option cannot be deleted because it is associated with product SKUs.
