In Validator, added ability to validate against criteria using annotations (i.e. validateMaxLength=6)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -229,6 +229,7 @@ admin.setting.listshippingservices.servicedisplayname=Shipping Service
 admin.setting.listshippingservices_nav=Configure Shipping Services
 admin.setting.paymentMethod.creditCard=Credit Card
 admin.setting.paymentMethod.creditCardsAccepted=Credit Cards Accepted
+admin.setting.paymentMethod.paypalExpress=Paypal Express
 admin.setting.save=Save Settings
 admin.setting.savePaymentMethod=Save Payment Method
 admin.setting.savePaymentMethod_nav=Save
