Setup checkout so that shipping methods can be selected and applied to your order.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat May 21 20:04:30 PDT 2011
+#Mon May 23 09:58:00 PDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -205,6 +205,7 @@ admin.setting.detailintegration=Integration Setup
 admin.setting.detailpermissions=User Permissions
 admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.detailshippingservice=Shipping Service Detail
+admin.setting.detailviewupdate=Update Views
 admin.setting.edit=Edit Global Settings
 admin.setting.editPaymentMethod=Edit Payment Method
 admin.setting.editPaymentService=Configure Payment Service
@@ -244,6 +245,7 @@ admin.setting.saveshippingmethod_nav=Save
 admin.setting.saveshippingmethod_success=Shipping Method Saved
 admin.setting.saveshippingservice=Save Shipping Service
 admin.setting.saveshippingservice_nav=Save
+admin.setting.updatefrontendviews=Update Frontend Views
 admin.sku.uploadImage=Upload Image
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
@@ -400,10 +402,11 @@ entity.optiongroup.optionGroupName=Option Group Name
 entity.optiongroup.options=Options
 entity.order.account=account
 entity.order.billingAddress=billingAddress
-entity.order.orderCloseDate=orderCloseDate
-entity.order.orderID=orderID
-entity.order.orderOpenDate=orderOpenDate
-entity.order.orderShipments=orderShipments
+entity.order.orderCloseDateTime=Date Closed
+entity.order.orderID=Order ID
+entity.order.orderNumber=Order Number
+entity.order.orderOpenDateTime=Date Placed
+entity.order.orderShipments=Order Shipments
 entity.order.orderStatusType=orderStatusType
 entity.orderitem.order=order
 entity.orderitem.orderItemID=orderItemID
