Added validation to payment service configuration (Issue #94)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sat May 21 20:04:30 PDT 2011
+#Mon May 23 20:42:35 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -235,7 +235,9 @@ admin.setting.savePaymentMethod=Save Payment Method
 admin.setting.savePaymentMethod_nav=Save
 admin.setting.savePaymentMethod_success=Payment Method Saved
 admin.setting.savePaymentService=Save Payment Service
+admin.setting.savePaymentService_error=Correct the form errors indicated below and re-submit.
 admin.setting.savePaymentService_nav=Save
+admin.setting.savePaymentService_success=Payment Service Saved
 admin.setting.savePermissions=Save Permissions
 admin.setting.savePermissions_nav=Save
 admin.setting.save_nav=Save
