--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon May 23 20:42:35 EDT 2011
+#Mon May 23 21:01:28 EDT 2011
 admin.account=Account Manager
 admin.account.create=Create New Account
 admin.account.delete=Delete Account
@@ -240,6 +240,8 @@ admin.setting.savePaymentService_nav=Save
 admin.setting.savePaymentService_success=Payment Service Saved
 admin.setting.savePermissions=Save Permissions
 admin.setting.savePermissions_nav=Save
+admin.setting.saveShippingService_error=Correct the form errors indicated below and re-submit
+admin.setting.saveShippingService_success=Shipping Service Saved
 admin.setting.save_nav=Save
 admin.setting.saveaddresszone_nav=Save
 admin.setting.saveshippingmethod=Save Shipping Method
