Removed file directory info from sku listing and made table 100% wide (Issue #95)

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -572,6 +572,7 @@ entity.sku.delete_validateIsDefault=The SKU cannot be deleted because it is the 
 entity.sku.delete_validateOrdered=This SKU cannot be deleted because it has been ordered.
 entity.sku.delete_validateonesku=The SKU cannot be deleted because each product must have at least one SKU.
 entity.sku.image.exists=Image Exists
+entity.sku.imageFile=Image File Name
 entity.sku.imagePath=Image Path
 entity.sku.isDefault=Default
 entity.sku.listPrice=List Price
@@ -583,6 +584,7 @@ entity.sku.qea=QEA
 entity.sku.qexp=QEXP
 entity.sku.qia=QIA
 entity.sku.qoh=QOH
+entity.sku.shippingWeight=Shipping Weight
 entity.sku.skuCode=SKU Code
 entity.sku.skuCode_validateUnique=This SKU code is already in use.
 entity.sku.skuID=skuID
